# pylegifrance

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  sitemap.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: story.yml
.github/actions/setup/: action.yml
.github/workflows/: deploy_docs.yml  release.yml  test.yml
analysis_architecture_diataxis/: index.html
assets/stylesheets/: extra.css
diataxis_reclassification_summary/: index.html
docs/: .pages  README.md  index.md  robots.txt
docs/explanation/: index.md
docs/explication/: architecture.md  index.md
docs/guides-pratiques/: .pages  index.md
docs/guides-pratiques/demarrage/: .pages  api-configuration.md  installation.md  piste-account.md
docs/guides-pratiques/recherche/code/: index.md
docs/guides-pratiques/recherche/jurisprudence/: index.md
docs/guides-pratiques/recherche/loda/: index.md
docs/how-to/: index.md
docs/reference/: architecture.md  index.md
docs/reference/Fond/: juri.md  recherche_code.md
docs/reference/Fond/LODA/: index.md
docs/reference/classes/: api_config.md  juri_api.md  juri_decision.md  legifrance_client.md
docs/reference/fonctions/: recherche_code.md  recherche_loda.md
docs/tutorials/: index.md
docs/tutoriels/: index.md
explanation/: index.html
explication/: index.html
explication/architecture/: index.html
guides-pratiques/: index.html
guides-pratiques/demarrage/api-configuration/: index.html
guides-pratiques/demarrage/installation/: index.html
guides-pratiques/demarrage/piste-account/: index.html
guides-pratiques/recherche/code/: index.html
guides-pratiques/recherche/jurisprudence/: index.html
guides-pratiques/recherche/loda/: index.html
how-to/: index.html
pylegifrance/: __init__.py  api.py  auth.py  client.py  config.py  config.yaml  endpoints_factory.py  exemples.py  formatters.py  models.py  pipeline_factory.py  utils.py
pylegifrance/api/: api.py
pylegifrance/client/: api.py
pylegifrance/fonds/: README.md  __init__.py  juri.py  loda.py
pylegifrance/models/: TODO_enum_list_codes.py  base.py  constants.py  consult.py  generic.py  identifier.py  juri.py  models.py  search.py  suggest.py
pylegifrance/models/juri/: api_wrappers.py  base.py  constants.py  filters.py  models.py  search.py
pylegifrance/models/loda/: __init__.py  api_wrappers.py  constants.py  models.py  search.py
pylegifrance/pipeline/: pipeline.py  pipeline_factory.py
pylegifrance/process/: formatters.py  processors.py
pylegifrance/test/: README.md  test_api.py  test_client.py  test_models.py  test_pipeline_factory.py  test_recherche.py
pylegifrance/tests/: test_recherche.py  tests.py  tests_api.py  tests_modeles.py  tests_recherche.py
reference/: index.html
reference/architecture/: index.html
reference/classes/api_config/: index.html
reference/classes/juri_api/: index.html
reference/classes/juri_decision/: index.html
reference/classes/legifrance_client/: index.html
reference/fonctions/recherche_code/: index.html
reference/fonctions/recherche_loda/: index.html
search/: search_index.json
tasks/: index.html
tests/: README.md  conftest.py  test_client.py  test_models.py  test_pipeline_factory.py  test_recherche.py
tests/integration/fonds/: shared.py  test_juri.py  test_loda.py
tests/integration/fonds/juri/: juri.feature  steps.py  test_scenarios.py
tests/integration/fonds/loda/: loda.feature  steps.py  test_scenario.py
tests/unit/fonds/: test_loda_helpers.py
tutorials/: index.html
tutoriels/: index.html
