[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylegifrance"
version = "0.0.3a1"
description = "Librairie qui fournit des fonctions simples pour rechercher dans legifrance"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Raphaël d'Assignies", email = "rdassignies@protonmail.ch" },
    { name = "Frederic F.", email = "17061560+freddo1503@users.noreply.github.com" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests",
    "PyYAML",
    "dotenv>=0.9.9",
    "tenacity>=9.0.0",
    "pydantic>=2.10.6"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocs-minify-plugin>=0.7.1",
    "pymdown-extensions"
]

[project.urls]
Homepage = "https://github.com/pylegifrance/pylegifrance"

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools]
package-data = { "pylegifrance" = ["pylegifrance/config.yaml"] }

[tool.setuptools.packages.find]
include = ["pylegifrance", "pylegifrance.*"]
exclude = ["site", "site.*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=3.4.0",
    "twine>=4.0.2"
]
