[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylegifrance"
version = "0.1.0b1"
description = "Librairie qui fournit des fonctions simples pour rechercher dans legifrance"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Raphaël d'Assignies", email = "rdassignies@protonmail.ch" },
    { name = "Frederic F.", email = "17061560+freddo1503@users.noreply.github.com" }
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "dotenv>=0.9.9",
    "tenacity>=9.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocs-minify-plugin>=0.7.1",
    "pymdown-extensions",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-awesome-autolinks>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pylegifrance/pylegifrance"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "timeout: mark test to timeout after a specified number of seconds"
]

[tool.setuptools.packages.find]
include = ["pylegifrance", "pylegifrance.*"]

[tool.setuptools.package-data]
pylegifrance = ["py.typed"]

[tool.setuptools]
include-package-data = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=3.4.0",
    "twine>=4.0.2"
]

[tool.datamodel-codegen]
input = "pylegifrance/models/generated/legifrance.json"
input-file-type = "jsonschema"
output = "pylegifrance/models/generated/model.py"
output-model-type = "pydantic_v2.BaseModel"
target-python-version = "3.12"

field-constraints = true
snake-case-field = true
strip-default-none = false
reuse-model = true
use-standard-collections = true
use-double-quotes = true
